# ego-camera-HAR

./: README.md  confusionMatrix.py  demoVideo.py  init_path.py  lstm_test.py  lstm_train.py  main.py  multitask_lstm.py  opencv_test.py  test.py  test_net.py
class/: Db.py  temp.py
func/data_layer/: layer.py  minibatch.py
func/datasets/: GTEA.py  KITCHEN.py
func/hand_segment/: config.py  crop_image.py  handsegment_layers.py  surgery.py  test.py  train.py
func/motion_net/: calOF.py  config.py  debug_layer.py  motion_data_layer.py  test.py  train.py
func/object_net/: config.py  object_data_layer.py  test.py  train.py
lib/dense_flow/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  denseFlow_gpu  denseFlow_gpu.cpp  denseImage  denseImage_gpu  denseImage_gpu.cpp  dense_flow
models/GTEA/handsegmentnet/: solver.prototxt  test.prototxt  train.prototxt
models/GTEA/motionnet/: solver.prototxt  test.prototxt  train.prototxt
models/GTEA/motionnet/FIVE_IMAGE/: solver.prototxt  test.prototxt
models/GTEA/motionnet/ONE_IMAGE/: solver.prototxt  test.prototxt  train.prototxt
models/GTEA/objectnet/VGG_CNN_M_2048/: deploy.prototxt  solver.prototxt  test.prototxt  test_bn.prototxt  train.prototxt  train_bn.prototxt
models/imagenet/: solver.prototxt  train.prototxt  train_fastrcnn.prototxt
utils/: blob.py  calMeanIMG.py  flowToColor.py  import_idt.py  sendMail.py  videoToFrame.py
