cmake_minimum_required(VERSION 2.8)
project( denseFlow )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( dense_flow denseFlow.cpp )
target_link_libraries( dense_flow ${OpenCV_LIBS} )
add_executable( denseImage denseImage.cpp )
target_link_libraries( denseImage ${OpenCV_LIBS} )
add_executable( denseFlow_gpu denseFlow_gpu.cpp )
target_link_libraries( denseFlow_gpu ${OpenCV_LIBS} )
add_executable( denseImage_gpu denseImage_gpu.cpp )
target_link_libraries( denseImage_gpu ${OpenCV_LIBS} )
